proj1/tests/other-tests/MINZ_tests/error/keyword_misuse.py
and = 1
elif = 1
else = 1
break = 1
class = 1
continue = 1
def = 1
not = 1
or = 1
if = 1
print = 1
in = 1
is = 1
for = 1
while = 1
return = 1
pass = 1
None = 1
True = 1
False = 1